Added Boost Submodule

--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,6 @@
 [submodule "submodules/intercept"]
 	path = submodules/intercept
 	url = https://github.com/intercept/intercept.git
+[submodule "submodules/boost"]
+	path = submodules/boost
+	url = https://github.com/boostorg/boost
