--- a/.gitmodules
+++ b/.gitmodules
@@ -4,3 +4,6 @@
 [submodule "submodules/boost"]
 	path = submodules/boost
 	url = https://github.com/boostorg/boost
+[submodule "submodules/tbb_arma"]
+	path = submodules/tbb_arma
+	url = https://github.com/BohemiaInteractive/TBB4
